better writting object controls

--- a/index.html
+++ b/index.html
@@ -20,19 +20,11 @@
         <li>D: Turn right</li>
         <li>Q: Strafe left</li>
         <li>E: Strafe right</li>
-        <li>Space bar: Move up and zoom out</li>
+        <li>Space: Move up and zoom out</li>
         <li>X: Move down and zoom in</li>
       </ul>
     </div>
-    <h2 class="instructions">Goal: Move all the disks from their platform to the target platform (under spotlight).</h2>
-    <div class="rules-info">
-      <h3>Rules</h3>
-      <ol>
-        <li>Only one disk can be moved at a time.</li>
-        <li>A Each move consists of taking the upper disk from one of the stacks and placing it on top of another stack or on an empty rod.</li>
-        <li>No disk may be placed on top of a disk that is smaller than it.</li>        
-      </ol>
-    </div>
+    <h1 class="instructions">Tower of Hanoi</h1>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
