--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>E: Strafe right</li>
         <li>Space: Move up and zoom out</li>
         <li>X: Move down and zoom in</li>
-        <li>Mouse: grab a disc and move it</li>
+        <li>Mouse: Grab a disc and move it</li>
       </ul>
     </div>
     <h1 class="instructions">Tower of Hanoi</h1>
