--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li>A: Turn left</li>
         <li>S: Move backward</li>
         <li>D: Turn right</li>
-        <li>Q: Strafe left</li>
-        <li>E: Strafe right</li>
+        <li>Q: Go left</li>
+        <li>E: Go right</li>
         <li>Space: Move up and zoom out</li>
         <li>X: Move down and zoom in</li>
         <li>Mouse: Grab a disc and move it</li>
